Add the space on nab bar toggole button

--- a/index.html
+++ b/index.html
@@ -6,22 +6,25 @@
 	<title>Tijender Sharma</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description"
-		content="Explore Tijender Sharma's professional portfolio, expertise in development, and social media presence." />
+		content="Discover Tijender Sharma's professional journey, achievements, and portfolio. Learn about Tijender's expertise in development and connect with him on social media." />
 	<meta name="keywords"
-		content="Tijender Sharma, Full Stack Developer, Portfolio, Social Media, LinkedIn, Instagram, Facebook, Twitter" />
+		content="Tijender, Tijender Sharma, Full Stack Developer, Portfolio, LinkedIn, Instagram, Facebook, Twitter" />
 	<meta name="author" content="Tijender Sharma" />
 	
-	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content="Tijender Sharma - Professional Portfolio" />
+	<!-- Facebook Open Graph -->
+	<meta property="og:title" content="Tijender Sharma - Full Stack Developer & Portfolio" />
 	<meta property="og:image" content="images/tijendersharma.jpg" />
 	<meta property="og:url" content="https://www.facebook.com/tijender.sharma.37/" />
-	<meta property="og:site_name" content="Tijender Sharma" />
+	<meta property="og:site_name" content="Tijender Sharma Official Portfolio" />
 	<meta property="og:description"
-		content="Connect with Tijender Sharma on Facebook, LinkedIn, Twitter, and Instagram to explore his professional achievements." />
-	<meta name="twitter:title" content="Tijender Sharma - Professional Portfolio" />
+		content="Connect with Tijender Sharma, a Full Stack Developer. Explore his portfolio and follow him on LinkedIn, Twitter, and Instagram." />
+	
+	<!-- Twitter Cards -->
+	<meta name="twitter:title" content="Tijender Sharma - Full Stack Developer & Portfolio" />
 	<meta name="twitter:image" content="images/tijendersharma.jpg" />
 	<meta name="twitter:url" content="https://x.com/tijender55" />
 	<meta name="twitter:card" content="summary_large_image" />
+
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
@@ -961,6 +964,38 @@ engineering, for me, is not just a career but a craft that I constantly strive t
 	
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
+	<script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "WebSite",
+	  "name": "Tijender Sharma Official Portfolio",
+	  "url": "https://tijender.site",
+	  "description": "Explore Tijender Sharma's professional portfolio, expertise in development, and social media presence.",
+	  "publisher": {
+	    "@type": "Person",
+	    "name": "Tijender Sharma",
+	    "url": "https://tijender.site/about",
+	    "image": {
+	      "@type": "ImageObject",
+	      "url": "https://tijender.site/images/tijendersharma.jpg",
+	      "width": 800,
+	      "height": 800
+	    },
+	    "sameAs": [
+	      "https://x.com/tijender55",
+	      "https://www.facebook.com/tijender.sharma.37",
+	      "https://www.linkedin.com/in/tijender-sharma/"
+	    ],
+	    "jobTitle": "Full Stack Developer"
+	  },
+	  "potentialAction": {
+	    "@type": "SearchAction",
+	    "target": "https://tijender.site/search?q={search_term_string}",
+	    "query-input": "required name=search_term_string"
+	  }
+	}
+	</script>
+
 
 	</body>
 </html>
