Add the space on nab bar toggole button

--- a/index.html
+++ b/index.html
@@ -906,9 +906,12 @@ engineering, for me, is not just a career but a craft that I constantly strive t
 							</div>
 
 							<div class="tijender-info-feature tijender-info-feature-sm animate-box" data-animate-effect="fadeInLeft">
+								
+								<a href="tel:08679128871">
 								<div class="tijender-info-icon">
 									<i class="icon-phone"></i>
 								</div>
+								</a>
 								<div class="tijender-info-text">
 									<p><a href="tel:08679128871">+91 8679128871</a></p>
 								</div>
